--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "5.1.0",
+    "primeflex": "2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.41.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
