--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "5.1.0",
+    "lodash": "^4.17.21",
     "primeflex": "2.0.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.5.1",
